add reveal replay and game.prefs location button to menu
closes #1229

--- a/src/main/resources/theme/main.fxml
+++ b/src/main/resources/theme/main.fxml
@@ -33,6 +33,8 @@
                                 <MenuItem onAction="#onRevealLogFolder" text="%menu.revealLogFolder"/>
                                 <MenuItem onAction="#onRevealMapFolder" text="%menu.revealMapFolder"/>
                                 <MenuItem onAction="#onRevealModFolder" text="%menu.revealModFolder"/>
+                                <MenuItem onAction="#onRevealReplayFolder" text="%menu.revealReplayFolder"/>
+                                <MenuItem onAction="#onRevealGamePrefsFolder" text="%menu.revealGamePrefsFile"/>
                                 <SeparatorMenuItem mnemonicParsing="false"/>
                                 <MenuItem onAction="#onExitItemSelected" text="%menu.exit"/>
                             </items>
