--- a/src/main/resources/theme/chat/chat_user_category.fxml
+++ b/src/main/resources/theme/chat/chat_user_category.fxml
@@ -2,6 +2,8 @@
 
 
 <?import javafx.scene.control.Label?>
-<Label xmlns:fx="http://javafx.com/fxml/1" fx:id="chatUserCategoryRoot"
-       fx:controller="com.faforever.client.chat.ChatUserItemCategoryController" text="Label"
-       xmlns="http://javafx.com/javafx/8.0.141"/>
+<?import javafx.scene.layout.VBox?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.ChatUserItemCategoryController"
+      xmlns="http://javafx.com/javafx/8.0.141">
+    <Label fx:id="chatUserCategoryRoot" text="Label" styleClass="chat-user-list-category"/>
+</VBox>
