--- a/src/main/resources/theme/play/custom_games.fxml
+++ b/src/main/resources/theme/play/custom_games.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.ToggleButton?>
@@ -17,60 +18,76 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-
-<StackPane fx:id="gamesRoot" alignment="TOP_CENTER" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.CustomGamesController">
-   <children>
-      <GridPane>
-         <columnConstraints>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" prefWidth="300.0" />
-         </columnConstraints>
-         <rowConstraints>
-             <RowConstraints vgrow="NEVER" />
-            <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-         </rowConstraints>
-         <children>
-             <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
-              <children>
-                  <HBox>
-                     <children>
-                        <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="ALWAYS">
-                           <children>
-                            <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCreateGameButtonClicked" styleClass="create-game-button" text="%games.create" />
-                            <JFXCheckBox fx:id="showPasswordProtectedGamesCheckBox" mnemonicParsing="false" text="%games.showPasswordProtectedGames" />
-                            <JFXCheckBox fx:id="showModdedGamesCheckBox" mnemonicParsing="false" text="%games.showModdedGames" />
-                            <JFXComboBox fx:id="chooseSortingTypeChoiceBox" />
-                            <Pane />
-                          <HBox alignment="BASELINE_LEFT" />
-                           </children>
-                        </FlowPane>
-                    <ToggleButton fx:id="tableButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onTableButtonClicked" text="%view.table">
-                    <toggleGroup>
-                        <ToggleGroup fx:id="viewToggleGroup" />
-                    </toggleGroup>
-                           <graphic>
-                               <Label styleClass="icon" text="" />
-                           </graphic>
-                  </ToggleButton>
-                    <ToggleButton fx:id="tilesButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#onTilesButtonClicked" selected="true" text="%view.tiles" toggleGroup="$viewToggleGroup">
-                           <graphic>
-                              <Label styleClass="icon" text="" />
-                           </graphic>
-                        </ToggleButton>
-                     </children>
-                  </HBox>
-              </children>
-              <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-              </padding>
-            </VBox>
-        <ScrollPane fx:id="gameDetailPane" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowSpan="2147483647">
-          <content>
-              <fx:include fx:id="gameDetail" source="game_detail.fxml" />
-          </content>
-        </ScrollPane>
-        <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
-   </children>
+<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="gamesRoot" alignment="TOP_CENTER"
+           xmlns="http://javafx.com/javafx/10.0.1" fx:controller="com.faforever.client.game.CustomGamesController">
+    <children>
+        <GridPane fx:id="gamesGridPane">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0"
+                                   prefWidth="300.0" fx:id="sidePaneColumn"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints vgrow="NEVER"/>
+                <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+            </rowConstraints>
+            <children>
+                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
+                    <children>
+                        <HBox>
+                            <children>
+                                <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="ALWAYS">
+                                    <children>
+                                        <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity"
+                                                   mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
+                                                   styleClass="create-game-button" text="%games.create"/>
+                                        <JFXCheckBox fx:id="showPasswordProtectedGamesCheckBox" mnemonicParsing="false"
+                                                     text="%games.showPasswordProtectedGames"/>
+                                        <JFXCheckBox fx:id="showModdedGamesCheckBox" mnemonicParsing="false"
+                                                     text="%games.showModdedGames"/>
+                                        <JFXComboBox fx:id="chooseSortingTypeChoiceBox"/>
+                                        <Pane/>
+                                        <HBox alignment="BASELINE_LEFT"/>
+                                    </children>
+                                </FlowPane>
+                                <Button fx:id="toggleSidePaneButton" minWidth="-Infinity" mnemonicParsing="false"
+                                        onAction="#toggleSidePane" text="%view.hideSidePane">
+                                    <padding>
+                                        <Insets right="50"/>
+                                    </padding>
+                                </Button>
+                                <ToggleButton fx:id="tableButton" minWidth="-Infinity" mnemonicParsing="false"
+                                              onAction="#onTableButtonClicked" text="%view.table">
+                                    <toggleGroup>
+                                        <ToggleGroup fx:id="viewToggleGroup"/>
+                                    </toggleGroup>
+                                    <graphic>
+                                        <Label styleClass="icon" text=""/>
+                                    </graphic>
+                                </ToggleButton>
+                                <ToggleButton fx:id="tilesButton" minWidth="-Infinity" mnemonicParsing="false"
+                                              onAction="#onTilesButtonClicked" selected="true" text="%view.tiles"
+                                              toggleGroup="$viewToggleGroup">
+                                    <graphic>
+                                        <Label styleClass="icon" text=""/>
+                                    </graphic>
+                                </ToggleButton>
+                            </children>
+                        </HBox>
+                    </children>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </VBox>
+                <ScrollPane fx:id="gameDetailPane" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1"
+                            GridPane.rowSpan="2147483647">
+                    <content>
+                        <fx:include fx:id="gameDetail" source="game_detail.fxml"/>
+                    </content>
+                </ScrollPane>
+                <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308"
+                            maxWidth="1.7976931348623157E308" GridPane.rowIndex="1" prefWidth="10000"/>
+            </children>
+        </GridPane>
+    </children>
 </StackPane>
