--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -104,7 +104,8 @@
         <HBox alignment="CENTER" spacing="5.0" GridPane.columnIndex="2" GridPane.halignment="CENTER"
               GridPane.rowIndex="7">
             <JFXButton mnemonicParsing="false" onAction="#onRandomMapButtonClicked" text="%game.create.randomMap" />
-            <JFXButton mnemonicParsing="false" onAction="#onGenerateMapButtonClicked" text="%game.create.generatedMap"/>
+            <JFXButton visible="false" mnemonicParsing="false" onAction="#onGenerateMapButtonClicked"
+                       text="%game.create.generatedMap"/>
         </HBox>
         <ListView fx:id="modListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="3" GridPane.vgrow="ALWAYS" />
         <JFXButton mnemonicParsing="false" onAction="#onSelectDefaultGameTypeButtonClicked" text="%game.create.defaultGameType" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
