--- a/src/main/resources/theme/settings/settings.fxml
+++ b/src/main/resources/theme/settings/settings.fxml
@@ -602,7 +602,7 @@
                                         <Label styleClass="h3" text="%settings.appearance.backgoundImage"
                                                GridPane.columnSpan="2147483647" GridPane.rowIndex="2"/>
                                         <JFXTextField fx:id="backgroundImageLocation"
-                                                      promptText="%settings.appearance.useDefaultImage"
+                                                      promptText="%settings.appearance.useNone"
                                                       GridPane.rowIndex="3"/>
                                         <HBox spacing="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                             <JFXButton mnemonicParsing="false" onAction="#onUseNoBackgroundImage"
