Fixing various things
- Potentially improved performance by only having one Tooltip and GameTooltipController per game list / game tile list
- Added space between teams inside tooltip (wrapping vbox in vbox was necessary for this to work)
- Made teams inside tiles have same size always to prevent weird layout
- Fixed Tooltip spacing problem (new helper method for adding content to a ToolTip inside JavaFxUtil)
- Fixed Tooltip spacing when only one team exists
- Fixed exceptions being thrown by GamesTableControllerTest

--- a/src/main/resources/theme/play/game_card.fxml
+++ b/src/main/resources/theme/play/game_card.fxml
@@ -10,8 +10,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="gameCardRoot" onMouseClicked="#onClick"
-          onMouseEntered="#onMouseEntered" onMouseExited="#onMouseExited" styleClass="game-card,card,hoverable"
-          xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.GameTileController">
+          styleClass="game-card,card,hoverable" xmlns="http://javafx.com/javafx/8.0.141"
+          fx:controller="com.faforever.client.game.GameTileController">
     <columnConstraints>
         <ColumnConstraints hgrow="NEVER" prefWidth="140.0"/>
         <ColumnConstraints hgrow="ALWAYS" maxWidth="220.0" minWidth="220.0" prefWidth="220.0"/>
