--- a/src/main/resources/theme/team_card.fxml
+++ b/src/main/resources/theme/team_card.fxml
@@ -3,13 +3,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="teamPaneRoot" prefWidth="200.0" spacing="20.0" styleClass="card"
-      xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.TeamCardController">
+
+<VBox VBox.vgrow="ALWAYS" fx:id="teamPaneRoot" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.TeamCardController">
+  <VBox VBox.vgrow="ALWAYS" prefWidth="200.0" spacing="20.0" styleClass="card">
     <children>
-        <Label fx:id="teamNameLabel" styleClass="h3" text="Label"/>
-        <VBox fx:id="teamPane"/>
+        <Label fx:id="teamNameLabel" styleClass="h3" text="Label" />
+        <VBox fx:id="teamPane" />
     </children>
     <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
+   </VBox>
+   <padding>
+      <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+   </padding>
 </VBox>
