--- a/src/main/resources/theme/play/ranked_1v1.fxml
+++ b/src/main/resources/theme/play/ranked_1v1.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import java.lang.String?>
@@ -39,13 +40,15 @@
               <children>
                   <Label styleClass="h2" text="%ranked1v1.choseFactions.title" />
                   <Label text="%ranked1v1.choseFactions.description" wrapText="true" GridPane.rowIndex="1" />
-                  <JFXButton fx:id="cancelButton" cancelButton="true" mnemonicParsing="false"
-                             onAction="#onCancelButtonClicked" text="%ranked1v1.cancel" GridPane.halignment="CENTER"
-                             GridPane.rowIndex="4" GridPane.valignment="CENTER"/>
-                  <HBox GridPane.rowIndex="4" GridPane.halignment="CENTER">
-	                  <JFXButton fx:id="playButton" defaultButton="true" mnemonicParsing="false"
-	                             onAction="#onPlayButtonClicked" text="%ranked1v1.play" />
-	                  <Label fx:id="timeUntilQueuePopLabel"></Label>
+                  <HBox alignment="CENTER" GridPane.rowIndex="4">
+                    <children>
+                      <Region HBox.hgrow="ALWAYS" />
+                      <JFXButton fx:id="cancelButton" cancelButton="true" mnemonicParsing="false" onAction="#onCancelButtonClicked" text="%ranked1v1.cancel" />
+                      <JFXButton fx:id="playButton" defaultButton="true" mnemonicParsing="false" onAction="#onPlayButtonClicked" text="%ranked1v1.play" />
+                      <Region HBox.hgrow="ALWAYS" />
+                      <Label fx:id="timeUntilQueuePopLabel" />
+                      <Region HBox.hgrow="ALWAYS" />
+                    </children>
                   </HBox>
                 <HBox alignment="CENTER" spacing="5.0" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                   <children>
